# RAG-LEARNING

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebook/: document.ipynb  pdf_loader.ipynb
src/: data_loader.py  embedding.py  search.py  vectorstore.py
